tdf#120791: restore window geometry coming back from fullscreen

Change-Id: I1492423fe6110bdc79aa68c715e968770f6767ab
Reviewed-on: https://gerrit.libreoffice.org/68672
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit e8e274b50658e1f9c2f40ce05249f7c857aeba64)